<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.visionit</groupId>
	<artifactId>SampleProjectParallelExecutionInCucumber</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<cucumber.version>4.2.0</cucumber.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>


	<profiles>

		<profile>
			<id>testng</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<testtype>TestNG</testtype>
				<test_tunner>TestNGRunner</test_tunner>
			</properties>
		</profile>
		<profile>
			<id>junit</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<testtype>Junit</testtype>
				<test_tunner>RunTest</test_tunner>
			</properties>
		</profile>

	</profiles>


	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M1</version>
				<configuration>
					<parallel>methods</parallel>
					<threadCount>4</threadCount>
					<perCoreThreadCount>false</perCoreThreadCount>
					<!-- <useUnlimitedThreads>true</useUnlimitedThreads>-->
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>

					<systemPropertyVariables>
						<testtype>${testtype}</testtype>
						<test_tunner>${test_tunner}</test_tunner>
					</systemPropertyVariables>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- For Cucumber -->
	<dependencies>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.1.1</version>
		</dependency>


		<!-- For dependency Injection -->

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.141.59</version>
		</dependency>

		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports-cucumber4-adapter</artifactId>
			<version>1.0.8</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.28</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>3.10.2</version>
		</dependency>


		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>4.1.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.1.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-cucumber4-jvm</artifactId>
			<version>2.17.2</version>
		</dependency>

	</dependencies>

</project>